Update ContextAgent configuration to enable memory and auto context compression. Bump @astreus-ai/astreus dependency to version 0.5.23 and adjust README for new agent settings.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "dev": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ai", "agent", "context", "compression", "memory", "astreus"],
+  "keywords": [
+    "ai",
+    "agent",
+    "context",
+    "compression",
+    "memory",
+    "astreus"
+  ],
   "dependencies": {
-    "@astreus-ai/astreus": "^0.5.21",
+    "@astreus-ai/astreus": "^0.5.23",
     "dotenv": "^17.2.1"
   },
   "devDependencies": {
